# mockingbird

./: .gitignore  CLAUDE.md  FRONTEND_GUIDE.md  README.md  pyproject.toml  pytest.ini  record.py  test_frontend_async_api.js  transcribe.py
backend/app/: config.py  main.py
backend/app/models/: __init__.py  base.py  mlx_backend.py  pytorch_backend.py
backend/app/routes/: __init__.py  generation.py  voice.py
backend/app/schemas/: __init__.py  generation.py  task.py  voice.py
backend/app/services/: __init__.py  audio.py  progress.py  storage.py  transcription.py  tts.py
backend/app/utils/: __init__.py  audio.py
frontend/: package-lock.json  package.json
frontend/src/: App-backup.tsx  index.css.backup  test.html
frontend/src/components/generation/: GenerationCard.tsx  GenerationList.tsx  ModelSelector.tsx  TextInput.tsx
frontend/src/components/ui/: AudioPlayer.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Select.tsx
frontend/src/components/voice/: VoiceCard.tsx  VoiceList.tsx  VoiceRecorder.tsx
frontend/src/hooks/: useGeneration.ts  useModels.ts  useVoices.ts
frontend/src/pages/: Generate.tsx  Home.tsx  VoiceLibrary.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
tests/: conftest.py  test_generation_endpoints.py  test_generation_integration.py  test_models_health_endpoints.py  test_voice_endpoints.py
